Upgrading to Jakarta EE 10.
Signed-off-by: Jacek Bilski <jacek@bilski.tech>